--- a/src/main/root/src/app/app.component.html
+++ b/src/main/root/src/app/app.component.html
@@ -85,12 +85,11 @@
     <div class="v1">
       <mat-card *ngIf="isContractSaved" class="instumentData">
         <mat-card-content>
-          <h3>Ticker : {{ticker}} | Contract ID: <span>{{contractSymbol}}</span></h3>
-          <h3>Strike Price : {{strikePrice}}  |  Spot Price : {{spotPrice}}</h3>
-          <h3>
-            <div><mat-label>Expiration Date :</mat-label> {{expirationDate}} </div><br>
-            <div><mat-label>Volatility :</mat-label> {{volatility}} </div><br>
-          </h3>
+          <br><div><b>Ticker : </b>{{ticker}} | <b>Contract ID: </b>{{contractSymbol}}</div><br>
+          <div><b>Strike Price : </b>{{strikePrice}}</div><br>
+          <div><b>Spot Price: </b>{{spotPrice}}</div><br>
+          <div><b>Expiration Date : </b>{{expirationDate}}</div><br>
+          <div><b>Volatility : </b>{{volatility}}</div><br>
         </mat-card-content>
         <div class="generateSetButton">
           <button mat-raised-button color="primary" type="submit" [disabled]="!isContractSaved" (click)="generateTrainingSet()">Generate Training Set</button>
